# aisdb-cli

./: .gitignore  Cargo.toml  boto.cfg.example
crates/aisdb-cli/: Cargo.toml
crates/aisdb-cli/src/: main.rs
crates/aisdb-s3/: Cargo.toml
crates/aisdb-s3/src/: client.rs  downloader.rs  lib.rs  utils.rs  zip.rs
crates/aisdb-s3/src/tests/: mod.rs
