[package]
name = "aisdb-s3"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
futures.workspace = true
md-5.workspace = true
rayon.workspace = true
rusoto_core.workspace = true
rusoto_credential.workspace = true
rusoto_s3.workspace = true
tempfile.workspace = true
tokio.workspace = true
zip.workspace = true
num_cpus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }